# INEEDTHATJOB

./: .env.example  .gitignore  CLAUDE.md  README.MD  config.py  debug_import.py  main.py  pipeline.py  pyproject.toml  requirements.txt  scheduler.py
apply/: email_sender.py  engine.py
apply/browser/: base.py  glints.py  jobstreet.py
db/: database.py  models.py
generation/: common.py  cover_letter.py  email_composer.py  resume.py
generation/prompts/: cover_letter.txt  email_draft.txt  job_parser.txt  resume_parser.txt  resume_tailor.txt
jobs/: models.py  scorer.py  service.py
jobs/scrapers/: base.py  glints.py  jobstreet.py  linkedin.py  social_parser.py  threads.py  x.py
profile/: importer.py  resume_parser.py  service.py
tests/: test_cookie_capture.py  test_cookie_extraction.py  test_generation_nonblocking.py  test_pipeline_defaults.py  test_prepare_route.py  test_scheduler.py
utils/: files.py  llm.py  logging.py  usage_tracker.py
web/: app.py  templates_env.py
web/routes/: api.py  applications.py  dashboard.py  guide.py  jobs.py  profile.py  settings.py
web/static/: custom.css
web/templates/: base.html  dashboard.html  guide.html  settings.html
web/templates/applications/: history.html  review.html
web/templates/jobs/: detail.html  list.html
web/templates/partials/: achievement_form.html  achievement_row.html  ai_usage.html  certification_form.html  certification_row.html  cookie_badges.html  cookie_capture_status.html  cover_letter_block.html  education_form.html  education_row.html  email_block.html  experience_card.html  macros.html  (+14 more)
(+1 files in other folders)
