[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ineedthatjob"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "python-docx>=1.1",
    "weasyprint>=62.3",
    "structlog>=24.2",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
browser = [
    "playwright>=1.44",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
